<package format="2">
    <name>hero_chassis_controller</name>
    <version>0.1.0</version>
    <description>A controller for chassis.</description>
    <maintainer email="zzp89877@gmail.com">Zhipeng Zhong</maintainer>
    <license>BSD</license>
    <author email="zzp89877@gmail.com">Zhipeng Zhong</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <build_depend>boost</build_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>control_toolbox</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>forward_command_controller</depend>
    <depend>pluginlib</depend>
    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf</depend>
    <export>
        <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
    </export>
</package>